# RAG_I

./: .env.example  .gitignore  Dockerfile  PRODUCTION_COMPLETE.md  PRODUCTION_SUMMARY.md  QUICK_REFERENCE.md  README.md  docker-compose-prod.yml  pyproject.toml  requirements.txt  test_api_endpoints.py  validate_fast.py  validate_production.py
backend/api/: main.py
backend/indexing/: chunker.py  crawler.py  embedder.py  pipeline.py
backend/models/: __init__.py  agent.py  config.py  llm.py  orchestrator.py  retriever.py
backend/utils/: __init__.py  cache.py  production.py
configs/: qdrant.yml
tests/: test_api.py  test_chunker.py  test_crawler.py  test_rag_components.py
