[tool.poetry]
name = "rag-project"
version = "0.1.0"
description = "A RAG (Retrieval Augmented Generation) project for enhanced AI responses."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
qdrant-client = "^1.8.0"
sentence-transformers = "^2.7.0"
rank-bm25 = "^0.2.2"
streamlit = "^1.33.0"
groq = "^0.6.0"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.0"
tiktoken = "^0.6.0"
structlog = "^24.1.0"
python-dotenv = "^1.0.1"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
ruff = "^0.3.5"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
